// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project generates project 1`] = `
Array [
  "package.json",
  "tailwind.config.ts",
  "src/app/layout.tsx",
  "src/app/page.tsx",
  "public/chakra/blue/dark/components/globals.css",
  "public/chakra/blue/dark/components/layout.tsx",
  "public/chakra/blue/dark/components/theme.ts",
  "public/chakra/blue/light/components/globals.css",
  "public/chakra/blue/light/components/layout.tsx",
  "public/chakra/blue/light/components/theme.ts",
  "public/chakra/teal/dark/components/globals.css",
  "public/chakra/teal/dark/components/layout.tsx",
  "public/chakra/teal/dark/components/theme.ts",
  "public/chakra/teal/light/components/globals.css",
  "public/chakra/teal/light/components/layout.tsx",
  "public/chakra/teal/light/components/theme.ts",
  "public/chakra/blue/dark/components/hero/page.tsx",
  "public/chakra/blue/light/components/hero/page.tsx",
  "public/chakra/teal/dark/components/hero/page.tsx",
  "public/chakra/teal/light/components/hero/page.tsx",
  "src/app/chakra/blue/dark/components/globals.css",
  "src/app/chakra/blue/dark/components/layout.tsx",
  "src/app/chakra/blue/dark/components/theme.ts",
  "src/app/chakra/blue/light/components/globals.css",
  "src/app/chakra/blue/light/components/layout.tsx",
  "src/app/chakra/blue/light/components/theme.ts",
  "src/app/chakra/teal/dark/components/globals.css",
  "src/app/chakra/teal/dark/components/layout.tsx",
  "src/app/chakra/teal/dark/components/theme.ts",
  "src/app/chakra/teal/light/components/globals.css",
  "src/app/chakra/teal/light/components/layout.tsx",
  "src/app/chakra/teal/light/components/theme.ts",
  "src/app/chakra/blue/dark/components/hero/page.tsx",
  "src/app/chakra/blue/light/components/hero/page.tsx",
  "src/app/chakra/teal/dark/components/hero/page.tsx",
  "src/app/chakra/teal/light/components/hero/page.tsx",
]
`;

exports[`project generates vanilla project 1`] = `
Object {
  "package.json": "{
  \\"name\\": \\"vanilla\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {},
  \\"dependencies\\": {},
  \\"devDependencies\\": {}
}",
  "public/vanilla/blue/dark/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "public/vanilla/blue/dark/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-blue-500/20 text-blue-600/80\\">
        New
      </div>
      <span className=\\"text-white text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-white text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-blue-500 hover:bg-blue-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-blue-500 hover:text-blue-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "public/vanilla/blue/dark/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
        background: '#111',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "public/vanilla/blue/dark/components/theme.ts": "export const theme = {
  colorMode: 'dark',
  colors: {
    primary: {
      50: '#eff6ff',
      100: '#dbeafe',
      200: '#bfdbfe',
      300: '#93c5fd',
      400: '#60a5fa',
      500: '#3b82f6',
      600: '#2563eb',
      700: '#1d4ed8',
      800: '#1e40af',
      900: '#1e3a8a',
      950: '#172554',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "public/vanilla/blue/light/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "public/vanilla/blue/light/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-blue-200/20 text-blue-600/80\\">
        New
      </div>
      <span className=\\"text-black text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-black text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-blue-500 hover:bg-blue-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-blue-500 hover:text-blue-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "public/vanilla/blue/light/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "public/vanilla/blue/light/components/theme.ts": "export const theme = {
  colorMode: 'light',
  colors: {
    primary: {
      50: '#eff6ff',
      100: '#dbeafe',
      200: '#bfdbfe',
      300: '#93c5fd',
      400: '#60a5fa',
      500: '#3b82f6',
      600: '#2563eb',
      700: '#1d4ed8',
      800: '#1e40af',
      900: '#1e3a8a',
      950: '#172554',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "public/vanilla/teal/dark/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "public/vanilla/teal/dark/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-teal-500/20 text-teal-600/80\\">
        New
      </div>
      <span className=\\"text-white text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-white text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-teal-500 hover:bg-teal-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-teal-500 hover:text-teal-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "public/vanilla/teal/dark/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
        background: '#111',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "public/vanilla/teal/dark/components/theme.ts": "export const theme = {
  colorMode: 'dark',
  colors: {
    primary: {
      50: '#f0fdfa',
      100: '#ccfbf1',
      200: '#99f6e4',
      300: '#5eead4',
      400: '#2dd4bf',
      500: '#14b8a6',
      600: '#0d9488',
      700: '#0f766e',
      800: '#115e59',
      900: '#134e4a',
      950: '#042f2e',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "public/vanilla/teal/light/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "public/vanilla/teal/light/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-teal-200/20 text-teal-600/80\\">
        New
      </div>
      <span className=\\"text-black text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-black text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-teal-500 hover:bg-teal-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-teal-500 hover:text-teal-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "public/vanilla/teal/light/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "public/vanilla/teal/light/components/theme.ts": "export const theme = {
  colorMode: 'light',
  colors: {
    primary: {
      50: '#f0fdfa',
      100: '#ccfbf1',
      200: '#99f6e4',
      300: '#5eead4',
      400: '#2dd4bf',
      500: '#14b8a6',
      600: '#0d9488',
      700: '#0f766e',
      800: '#115e59',
      900: '#134e4a',
      950: '#042f2e',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "src/app/layout.tsx": "export default function RootLayout({
  children,
}: {
  children: React.ReactNode
}) {
  return (
    <html lang=\\"en\\">
      <body>{children}</body>
    </html>
  )
}
",
  "src/app/page.tsx": "import Link from 'next/link';
export default function Page() {
  return (
    <div>
      <h1 className=\\"text-4xl\\">Components</h1>
      <ul>
        <li>
          <Link href=\\"/vanilla/teal/light/components/hero\\">
            /vanilla/teal/light/components/hero
          </Link>
        </li>
        <li>
          <Link href=\\"/vanilla/blue/light/components/hero\\">
            /vanilla/blue/light/components/hero
          </Link>
        </li>
        <li>
          <Link href=\\"/vanilla/teal/dark/components/hero\\">
            /vanilla/teal/dark/components/hero
          </Link>
        </li>
        <li>
          <Link href=\\"/vanilla/blue/dark/components/hero\\">
            /vanilla/blue/dark/components/hero
          </Link>
        </li>
      </ul>
      <h1 className=\\"text-4xl\\">Public</h1>
      <ul>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/globals.css\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/globals.css
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/layout.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/layout.tsx
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/theme.ts\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/theme.ts
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/hero/page.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/light/components/hero/page.tsx
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/globals.css\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/globals.css
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/layout.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/layout.tsx
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/theme.ts\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/theme.ts
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/hero/page.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/light/components/hero/page.tsx
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/globals.css\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/globals.css
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/layout.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/layout.tsx
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/theme.ts\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/theme.ts
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/hero/page.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/teal/dark/components/hero/page.tsx
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/globals.css\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/globals.css
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/layout.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/layout.tsx
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/theme.ts\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/theme.ts
          </a>
        </li>
        <li>
          <a href=\\"/__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/hero/page.tsx\\">
            /__NOYA_REPLACE_BASE_PATH__/vanilla/blue/dark/components/hero/page.tsx
          </a>
        </li>
      </ul>
    </div>
  );
}
",
  "src/app/vanilla/blue/dark/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "src/app/vanilla/blue/dark/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-blue-500/20 text-blue-600/80\\">
        New
      </div>
      <span className=\\"text-white text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-white text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-blue-500 hover:bg-blue-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-blue-500 hover:text-blue-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "src/app/vanilla/blue/dark/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
        background: '#111',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "src/app/vanilla/blue/dark/components/theme.ts": "export const theme = {
  colorMode: 'dark',
  colors: {
    primary: {
      50: '#eff6ff',
      100: '#dbeafe',
      200: '#bfdbfe',
      300: '#93c5fd',
      400: '#60a5fa',
      500: '#3b82f6',
      600: '#2563eb',
      700: '#1d4ed8',
      800: '#1e40af',
      900: '#1e3a8a',
      950: '#172554',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "src/app/vanilla/blue/light/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "src/app/vanilla/blue/light/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-blue-200/20 text-blue-600/80\\">
        New
      </div>
      <span className=\\"text-black text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-black text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-blue-500 hover:bg-blue-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-blue-500 hover:text-blue-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "src/app/vanilla/blue/light/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "src/app/vanilla/blue/light/components/theme.ts": "export const theme = {
  colorMode: 'light',
  colors: {
    primary: {
      50: '#eff6ff',
      100: '#dbeafe',
      200: '#bfdbfe',
      300: '#93c5fd',
      400: '#60a5fa',
      500: '#3b82f6',
      600: '#2563eb',
      700: '#1d4ed8',
      800: '#1e40af',
      900: '#1e3a8a',
      950: '#172554',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "src/app/vanilla/teal/dark/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "src/app/vanilla/teal/dark/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-teal-500/20 text-teal-600/80\\">
        New
      </div>
      <span className=\\"text-white text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-white text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-teal-500 hover:bg-teal-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-teal-500 hover:text-teal-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "src/app/vanilla/teal/dark/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
        background: '#111',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "src/app/vanilla/teal/dark/components/theme.ts": "export const theme = {
  colorMode: 'dark',
  colors: {
    primary: {
      50: '#f0fdfa',
      100: '#ccfbf1',
      200: '#99f6e4',
      300: '#5eead4',
      400: '#2dd4bf',
      500: '#14b8a6',
      600: '#0d9488',
      700: '#0f766e',
      800: '#115e59',
      900: '#134e4a',
      950: '#042f2e',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "src/app/vanilla/teal/light/components/globals.css": "@tailwind base;
@tailwind components;
@tailwind utilities;",
  "src/app/vanilla/teal/light/components/hero/page.tsx": "'use client';


export default function Hero() {
  return (
    <div className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
      <div className=\\"inline-flex items-center px-2.5 py-0.5 rounded-full text-sm font-medium bg-teal-200/20 text-teal-600/80\\">
        New
      </div>
      <span className=\\"text-black text-6xl font-bold tracking-tighter leading-none text-center\\">
        Create, iterate, inspire.
      </span>
      <span className=\\"text-black text-3xl font-bold tracking-tight leading-none text-center\\">
        Turn great ideas into new possibilities.
      </span>
      <div className=\\"flex items-center gap-4 mt-2\\">
        <button className=\\"appearance-none text-sm font-bold rounded-md px-3.5 py-2.5 bg-teal-500 hover:bg-teal-400 text-white shadow-sm\\">
          Get Started
        </button>
        <a
          className=\\"text-sm font-bold text-teal-500 hover:text-teal-400\\"
          href=\\"#\\"
        >
          Learn More
        </a>
      </div>
    </div>
  );
}
",
  "src/app/vanilla/teal/light/components/layout.tsx": "'use client';

import './globals.css';
import React from 'react';
import { theme } from './theme';

export default function NextProvider(props: React.PropsWithChildren<{}>) {
  return (
    <div
      style={{
        minHeight: '100vh',
        display: 'flex',
        flexDirection: 'column',
        fontFamily: 'Manrope, sans-serif',
      }}
    >
      {props.children}
    </div>
  );
}
",
  "src/app/vanilla/teal/light/components/theme.ts": "export const theme = {
  colorMode: 'light',
  colors: {
    primary: {
      50: '#f0fdfa',
      100: '#ccfbf1',
      200: '#99f6e4',
      300: '#5eead4',
      400: '#2dd4bf',
      500: '#14b8a6',
      600: '#0d9488',
      700: '#0f766e',
      800: '#115e59',
      900: '#134e4a',
      950: '#042f2e',
    },
    neutral: {
      50: '#f8fafc',
      100: '#f1f5f9',
      200: '#e2e8f0',
      300: '#cbd5e1',
      400: '#94a3b8',
      500: '#64748b',
      600: '#475569',
      700: '#334155',
      800: '#1e293b',
      900: '#0f172a',
      950: '#020617',
    },
  },
};
",
  "tailwind.config.ts": "import type { Config } from 'tailwindcss'

const config: Config = {
  important: true,
  content: [
    './src/pages/**/*.{js,ts,jsx,tsx,mdx}',
    './src/components/**/*.{js,ts,jsx,tsx,mdx}',
    './src/app/**/*.{js,ts,jsx,tsx,mdx}',
  ],
  theme: {},
  plugins: [],
}
export default config
",
}
`;

exports[`renders classnames 1`] = `
"<Box className=\\"flex flex-col items-center justify-center p-10 flex-1 gap-4\\">
  <Tag>New</Tag>
  <Text fontSize=\\"5xl\\" className=\\"leading-none text-center\\">
    Create, iterate, inspire.
  </Text>
  <Text fontSize=\\"2xl\\" className=\\"leading-none text-center\\">
    Turn great ideas into new possibilities.
  </Text>
  <Box className=\\"flex items-center gap-4 mt-2\\">
    <Button>Get Started</Button>
    <Link href=\\"#\\">Learn More</Link>
  </Box>
</Box>;
"
`;

exports[`renders default 1`] = `
"<Box
  display=\\"flex\\"
  flexDirection=\\"column\\"
  alignItems=\\"center\\"
  justifyContent=\\"center\\"
  p=\\"2.5rem\\"
  flex=\\"1\\"
  gap=\\"1rem\\"
>
  <Tag>New</Tag>
  <Text fontSize=\\"5xl\\" lineHeight=\\"1\\" textAlign=\\"center\\">
    Create, iterate, inspire.
  </Text>
  <Text fontSize=\\"2xl\\" lineHeight=\\"1\\" textAlign=\\"center\\">
    Turn great ideas into new possibilities.
  </Text>
  <Box display=\\"flex\\" alignItems=\\"center\\" gap=\\"1rem\\" mt=\\"0.5rem\\">
    <Button>Get Started</Button>
    <Link href=\\"#\\">Learn More</Link>
  </Box>
</Box>;
"
`;

exports[`theme generates transformer 1`] = `
"import { extendTheme, withDefaultColorScheme } from '@chakra-ui/react';
export const theme = extendTheme(
  {
    config: { initialColorMode: 'light', useSystemColorMode: false },
    colors: {
      primary: {
        50: '#f5f3ff',
        100: '#ede9fe',
        200: '#ddd6fe',
        300: '#c4b5fd',
        400: '#a78bfa',
        500: '#8b5cf6',
        600: '#7c3aed',
        700: '#6d28d9',
        800: '#5b21b6',
        900: '#4c1d95',
        950: '#2e1065',
      },
      neutral: {
        50: '#f8fafc',
        100: '#f1f5f9',
        200: '#e2e8f0',
        300: '#cbd5e1',
        400: '#94a3b8',
        500: '#64748b',
        600: '#475569',
        700: '#334155',
        800: '#1e293b',
        900: '#0f172a',
        950: '#020617',
      },
    },
  },
  withDefaultColorScheme({ colorScheme: 'primary' })
);
"
`;
